Origin/site updates (#8)
* Add MIT license to LICENSE.

* generate date and all people are cool

* Fix a few minor issues.

* remove references to PLC4X

* add myself to the team page

* escape &'s

* escape question marks

* better way to escape links

* sync with web site changes

* Update site/src/site/asciidoc/developers/team.adoc

Co-Authored-By: Lars Francke <github@lars-francke.de>

* fix up team page and add my photo

* add place holder logo

--- a/tools/maven-revealjs-asciidoctor-templte/src/main/theme/apache.css
+++ b/tools/maven-revealjs-asciidoctor-templte/src/main/theme/apache.css
@@ -344,6 +344,6 @@ body {
   right: 5px;
   width: 306px;
   height: 100px;
-  background-image: url("../../../images/logo-plc4x.png");
+  background-image: url("../../../images/logo-training.png");
 }*/
 
