move copyright to NOTICE file

--- a/content/ApacheWay/NavigatingASFIncubation/libs/docinfo-hack/document.html.slim
+++ b/content/ApacheWay/NavigatingASFIncubation/libs/docinfo-hack/document.html.slim
@@ -114,7 +114,7 @@ html lang=(attr :lang, 'en' unless attr? :nolang)
         =content
     .footer
       .left
-      .right Copyright &copy; 2019 Justin Mclean, Licensed under the Apache License, Version 2.0.<br>Apache and the Apache feather logo are trademarks of The Apache Software Foundation.
+      .right Licensed under the Apache License, Version 2.0.<br>Apache and the Apache feather logo are trademarks of The Apache Software Foundation.
     script src="#{revealjsdir}/lib/js/head.min.js"
     script src="#{revealjsdir}/js/reveal.js"
     javascript:
