--- a/tools/maven-revealjs-asciidoctor-templte/src/main/theme/apache.css
+++ b/tools/maven-revealjs-asciidoctor-templte/src/main/theme/apache.css
@@ -18,7 +18,7 @@
 */
 
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
-  color: #222; }
+  color: #fff; }
 
 /*********************************************
  * GLOBAL STYLES
@@ -27,16 +27,16 @@ body {
   background-image: url("../../../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #222; }
+  background-color: #fff; }
 
 .reveal {
   font-family: Panton-Regular, Helvetica, sans-serif;
   font-size: 34px;
   font-weight: normal;
-  color: #fff; }
+  color: #000; }
 
 ::selection {
-  color: #fff;
+  color: #000;
   background: #bee4fd;
   text-shadow: none; }
 
@@ -49,7 +49,7 @@ body {
  *********************************************/
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
+  color: #000;
   font-family: Panton-Regular, Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
